fix(contact-Form-Modal): Fixed alignment and color in contact form modal for /propertyowners

--- a/app/components/Contact/ContactModal.module.css
+++ b/app/components/Contact/ContactModal.module.css
@@ -16,15 +16,23 @@
     flex-direction: column;
 }
 
+.formContainer{
+    position: relative;
+}
 .buttonClose{
     background-color: transparent;
     border: 1px solid var(--color-secondary);
     font-family: var(--font-primary);
     border-radius: 10px;
-    color: white;
+    color: var(--color-secondary);
     margin-bottom: .5rem;
     cursor: pointer;
     height: fit-content;
-    width: fit-content;    
+    width: fit-content;   
+    padding: .5rem; 
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    line-height: 15px;
 }
 
