--- a/app/components/Contact/contactForm.module.css
+++ b/app/components/Contact/contactForm.module.css
@@ -25,8 +25,8 @@
     letter-spacing: -0.44px;
 }
 
-.information{
-    color: rgba(0, 0, 0, 0.80);
+.subtitle{
+    color: rgba(0, 0, 0, 0.371) !important;
     font-family: var(--font-secondary);
     font-size: 16px;
     font-style: normal;
